# gimbal_ros

./: README.md
gimbal_node/: CMakeLists.txt  package.xml
gimbal_node/include/: handle.h  main.h  protocol.h  protocol_define.h  uart.h
gimbal_node/msg/: gimbal.msg
gimbal_node/src/: gimbal_main_node.cpp  gimbal_teleop.cpp  handle.cpp  protocol.cpp  uart.cpp
